--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "gulp": "^4.0.2"
   },
   "peerDependencies": {
-    "gulp": "^4.0.2",
-    "tiddlywiki": "5.1.21"
+    "gulp": "^4.0.2"
   },
   "dependencies": {
     "gulp-debug": "^4.0.0",
+    "tiddlywiki": "5.1.21",
     "gulp-sass": "^4.1.0",
     "read-vinyl-file-stream": "^2.0.3",
     "sass": "^1.26.5",
