--- a/package.json
+++ b/package.json
@@ -28,19 +28,21 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.0.1",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "jest": "^26.0.1"
   },
   "peerDependencies": {
     "gulp": "^4.0.2"
   },
   "dependencies": {
+    "fancy-log": "^1.3.3",
     "gulp-debug": "^4.0.0",
-    "tiddlywiki": "5.1.21",
     "gulp-sass": "^4.1.0",
+    "plugin-error": "^1.0.1",
     "read-vinyl-file-stream": "^2.0.3",
     "sass": "^1.26.5",
     "through2": "^3.0.1",
+    "tiddlywiki": "5.1.21",
     "vinyl": "^2.2.0"
   }
 }
