--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "gulp": "^4.0.2"
   },
   "dependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
     "fancy-log": "^1.3.3",
+    "gulp-babel": "^8.0.0",
     "gulp-debug": "^4.0.0",
     "gulp-sass": "^4.1.0",
     "plugin-error": "^1.0.1",
