--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "gulp": "^4.0.2"
   },
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "fancy-log": "^1.3.3",
     "gulp-babel": "^8.0.0",
